--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Nothing here yet.
+This will be a book teaching C programming to anyone who has already learned
+one other programming language.  It will teach modern C with heavey emphasis
+on reliable programming.
