Laid the foundation of the book and got the tone of it thought out.

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,22 +1,31 @@
-\chapter{Introduction}
+\chapter{Introduction: The Cartesian Dream Of C}
 
-The introduction to "Learn C The Hard Way".
+\begin{quotation}
 
-Here is a simple first program you can make in C:
+Whatever I have up till now accepted as most true and assured I have gotten
+either from the senses or through the senses. But from time to time I have
+found that the senses deceive, and it is prudent never to trust completely
+those who have deceived us even once.
 
-\begin{code}{Simple C Program}
-<< d['code/ex1.c|pyg|l'] >>
-\end{code}
+    \attrib{Rene Descartes, Meditations On First Philosophy}
+\end{quotation}
 
-You can put this into a \file{ex1.c} then type:
+If there ever were a quote that described programming with C, it would be this.
+To many programmers, this makes C scary and evil.  It is the Devil, Satan, the
+trickster Loki come to destroy your productivity with his seductive talk of
+pointers and direct access to the machine.  Then, once this computational
+Lucifer has you hooked, he destroys your world with the evil "segfault" and
+laughs as he reveals the trickery in your bargain with him.
 
-\begin{code}{Building ex1}
-\begin{Verbatim}
-make ex1
-./ex1
-\end{Verbatim}
-\end{code}
+But, C is not to blame for this state of affairs.  No my friends, your computer
+and the Operating System controlling it are the real tricksters.  They conspire
+to hide their true inner workings from you so that you can never really know
+what is going on.  The C programming language's only failing is giving you
+access to what is really there, and telling you the cold hard raw truth.  C
+gives you the red pill.  C pulls the curtain back to show you the wizard.
+\emph{C is truth.}
 
-Try it and let me know if it worked.
+Why use C then if it's so dangerous?   Because C gives you power over the false
+reality of abstraction and liberates you from stupidity.
 
 
