--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 \usepackage{pastie}
 %\usepackage{palatino}
 \usepackage[
-    pdftitle={Learn C The Hard Way: A Clear and Direct Introduction To Programming In C},
+    pdftitle={Learn C The Hard Way: A Clear \& Direct Guide To Modern C Programming},
     pdfauthor={Zed A. Shaw},
     pdfsubject={An introduction to C programming for people who know one other language.},
     pdfkeywords={C, Programming},
@@ -14,12 +14,13 @@
 ]{hyperref}
 \usepackage{float}
 \usepackage{fancybox}
-\usepackage{savetrees}
+%\usepackage{savetrees}
 \usepackage{fancyvrb}
 \usepackage{color}
 \usepackage{parskip}
 \usepackage{textcomp}
 \usepackage{listings}
+\usepackage{attrib}
 \parskip 7.2pt
 
 \lstset{basicstyle=\ttfamily,
