--- a/preface.tex
+++ b/preface.tex
@@ -1,3 +1,4 @@
 \chapter{Preface}
 
-Preface to Learn C The Hard Way.
+You can grab the \href{http://learncodethehardway.org/LearnCTheHardWay-preview.pdf}{PDF Preview}
+to take a look.  Otherwise this is a rough dump of the book as I build the structure.
