Switch to using pdflatex since it seems to work everywhere.

--- a/preface.tex
+++ b/preface.tex
@@ -2,3 +2,12 @@
 
 You can grab the \href{http://learncodethehardway.org/LearnCTheHardWay-preview.pdf}{PDF Preview}
 to take a look.  Otherwise this is a rough dump of the book as I build the structure.
+
+There is a mailing list for the book at
+\href{mailto:lcthw@librelist.com}{lcthw@librelist.com} which you can join.
+I'll be doing announcements as new material is up, and you can ask questions if
+you get stuck or have comments.
+
+Finally, don't forget that I have \href{http://learnpythonthehardway.org}{Learn Python The Hard Way, 2nd Edition} which you should read if you can't code yet.   LCTHW will
+\emph{not} be for beginners, but for people who have at least read LPTHW or know
+one other programming language.
