Last chapter going through KRC started.

--- a/commands.tex
+++ b/commands.tex
@@ -26,6 +26,7 @@
 \newcommand{\ruby}[1]{{\it\ttfamily #1}}
 \newcommand{\book}[2]{{\it\ttfamily #1} by {\it #2}}
 \newcommand{\program}[1]{\it\ttfamily #1}
+\newcommand{\krc}{\ident{"K\&R C"} }
 
 \newenvironment{aside}[1]
 {
