--- a/krcritique.tex
+++ b/krcritique.tex
@@ -10,7 +10,7 @@ piece of programmer lore that is not soon to die.
 I myself believed that until I started writing this book. You see, \krc is
 actually riddled with bugs and bad style.  Its age is no excuse. These were
 bugs when they wrote the first printing, and the 42nd printing.  I hadn't
-actually realized just how bad most of the code was in this book and recommende
+actually realized just how bad most of the code was in this book and recommended
 it to many people.  After reading through it for just an hour I decided that it
 needs to be taken down from its pedestal and relegated to history rather than
 vaunted as state of the art.
