--- a/krcritique.tex
+++ b/krcritique.tex
@@ -30,10 +30,10 @@ a unit test that \emph{exercises} the bugs.  We'll then run this test under
 valgrind to get statistics and data, and then we'll fix the bugs with a redesign.
 
 This will obviously be a long chapter so I'm going to only do a handful of
-these and then I'm going to sick you on the rest of the book like a bloodhound.
-I'll provide a guide that is each page, with the code on it, and hints to the
-bugs that it has.  Your job is to then tear that piece of code apart and try to
-think like an attacker trying to break the code.
+these and then I'm going have you do the rest.  I'll provide a guide that is
+each page, with the code on it, and hints to the bugs that it has.  Your job is
+to then tear that piece of code apart and try to think like an attacker trying
+to break the code.
 
 \begin{aside}{Warning For The Fanboys}
 As you read this, if you feel that I am being disrespectful to the
