Introduction sort of laid down.

--- a/introduction.tex
+++ b/introduction.tex
@@ -29,3 +29,96 @@ Why use C then if it's so dangerous?   Because C gives you power over the false
 reality of abstraction and liberates you from stupidity.
 
 
+\section{What You Will Learn}
+
+The purpose of this book is to get you strong enough in C
+that you'll be able to write your own software in it, or modify
+someone else's code.  At the end of the book we actually take
+code from a more famous book called \krc and code review it
+using what you've learned.  To get to this stage you'll have to
+learn a few things:
+
+\begin{enumerate}
+\item The basics of C syntax and idioms.
+\item Compilation, make files, linkers.
+\item Finding bugs and preventing them.
+\item Defensive coding practices.
+\item Breaking C code.
+\item Writing basic Unix systems software.
+\end{enumerate}
+
+By the final chapter you will have more than enough ammunition
+to tackle basic systems software, libraries, and other smaller
+projects.
+
+
+\section{How To Read This Book}
+
+This book is intended for programmers who have learned at least one other
+programming language.  I refer you to
+\href{http://learnpythonthehardway.org}{Learn Python The Hard Way} or to
+\href{http://ruby.learncodethehardway.org}{Learn Ruby The Hard Way} if you
+haven't learned a programming language yet.  Those two books are for total
+beginners and work very well.  Once you've done those then you can come back
+and start this book.
+
+For those who've already learned to code, this book may seem strange
+at first.  It's not like other books where you read paragraph after
+paragraph of prose and then type in a bit of code here and there.  Instead
+I have you coding right away and then I explain what you just did.
+This works better because it's easier to explain something you've 
+already experienced.
+
+Because of this structure, there are a few rules you \emph{must} follow
+in this book:
+
+\begin{enumerate}
+\item Type in all of the code. Do not copy-paste!
+\item Type the code in exactly, even the comments.
+\item Get it to run and make sure it prints the same output.
+\item If there are bugs fix them.
+\item Do the extra credit but it's alright to skip ones you can't figure out.
+\item Always try to figure it out first before trying to get help.
+\end{enumerate}
+
+If you follow these rules, do everything in the book, and still can't
+code C then you at least tried.  It's not for everyone, but the act
+of trying will make you a better programmer.
+
+\section{About "The Hard Way"}
+
+I wrote about the philosophy of "The Hard Way" in my first book using
+this method, but I'll paraphrase it again since I'm assuming you've
+read my other beginner books or know what you're doing.
+
+The key to "The Hard Way" isn't that this material is difficult, but
+instead that it's "hard" because to be good at things you have to
+practice.  Practice is sometimes painful, annoying, and tedious.  You
+have to work and sweat to get what seems like absolutely no benefits
+in the beginning.  But, if you work at it and focus on learning as
+exactly as possible, then one day suddenly you can do it.
+
+This book is organized so that, in the first section, you are doing
+what seems like tedious boring irritating rote work.  This section
+is all about making you strong and getting you the foundation skills.
+The second half of the book is about applying those skills to more
+fun problems and exploring all the things the language has to offer.
+You might think you can skip the foundational skills at the beginning,
+but if you do then you'll be missing out on gaining confidence and
+building your "chops".
+
+One tip for you if you find yourself really irritated at a particular
+exercise is to \emph{take breaks}.  When you feel that annoyance build
+up, just take a break and watch some TV or play video games.  I go play
+guitar.  After a little bit, come back and keep going.  Even if you just
+do it in 5 minute spurts, eventually you'll build up your stamina and
+be able to write code for hours on end, lost in it.
+
+
+\section{License}
+
+This book is free for you to read, but until I'm done you can't distribute it
+or modify it.  I need to make sure that unfinished copies of it do not get out
+and mess up a student on accident.
+
+
