Talk about IDEs.

--- a/ex0.tex
+++ b/ex0.tex
@@ -70,4 +70,78 @@ For Windows users I'll show you how to get a basic Ubuntu Linux system up and
 running in a virtual machine so that you can still do all of my exercises, but
 avoid all the painful Linux installation problems.
 
+... have to figure this one out.
+
+
+\section{Text Editor}
+
+The choice of text editor for a programmer is a tough one.  For beginners
+I tell them to just use \href{http://projects.gnome.org/gedit/}{Gedit} since
+it's simple and works for code.  However, it doesn't work in certain
+internationalized situations, and chances are you already have a favorite
+text editor if you've been programming for a while.
+
+With this in mind, I want you to try out a few of the standard programmer
+text editors for your platform and then stick with the one that you like
+best.  If you've been using GEdit and like it then stick with it.  If you
+want to try something different, then try it out real quick and pick one.
+
+The most important thing is \emph{do not get stuck picking the perfect editor}.
+Text editors all just kind of suck in odd ways.  Just pick one, stick with it,
+and if you find something else you like try it out.  Don't spend days
+on end configuring it and making it perfect.
+
+Some text editors to try out are:
+
+\begin{enumerate}
+\item \href{http://projects.gnome.org/gedit/}{Gedit} on Linux and OSX.
+\item \href{http://www.barebones.com/products/textwrangler/}{TextWrangler} on OSX.
+\item \href{http://www.nano-editor.org/}{Nano} which runs in Terminal and works nearly everywhere.
+\item \href{http://www.gnu.org/software/emacs/}{Emacs} and \href{http://emacsformacosx.com/}{Emacs for OSX}.  Be prepared to do some learning though.
+\item \href{http://www.vim.org/}{Vim} and \href{http://code.google.com/p/macvim/}{MacVim}
+\end{enumerate}
+
+There is probably a different editor for every person out there, but these are
+just a few of the free ones that I know work.  Try a few out, and maybe some
+commercial ones until you find one that you like.
+
+\subsection{WARNING: Do Not Use And IDE}
+
+An IDE, or "Integrated Development Environment" will turn you stupid.  They are
+the worst tools if you want to be a good programmer because they hide what's
+going on from you, and your job is to know what's going on.  They are useful
+if you're trying to get something done and the platform is designed around 
+a particular IDE, but for learning to code C (and many other languages) they
+are pointless.
+
+\begin{aside}{IDEs and Guitar Tablature}
+If you've played guitar then you know what tablature is, but for everyone else
+let me explain.  In music there's an established notation called the "staff notation".  It's a generic, very old, and universal way to write down what someone
+should play on an instrument.  If you play piano this notation is fairly 
+easy to use, since it was created mostly for piano and composers.
+
+Guitar however is a weird instrument that doesn't really work with notation,
+so guitarists have an alternative notation called "tablature".  What tablature
+does is, rather than tell you the not to play, it tells you the fret
+and string you should play at that time.  You could learn whole songs without
+ever knowing about a single thing you're playing.  Many people do it this way,
+but if you want to know \emph{what} you're playing, then tablature is pointless.
+
+It may be easier, but traditional notation tells you how to play the \emph{music} rather than just how to play the guitar.  With traditional notation I can
+walk over to a piano and play the same song.  I can play it on a bass.  I can
+put it into a computer and design whole scores around it.  With tablature I can
+just play it on a guitar.
+
+IDEs are like tablature.  Sure, you can code pretty quickly, but you can only
+code in that one language on that one platform.  This is why companies love 
+selling them to you.  They know you're lazy, and since it only works on their
+platform they've got you locked in because you are lazy.
+
+The way you break the cycle is you suck it up and finally learn to code without
+an IDE.  A plain editor, or a programmer's editor like Vim or Emacs, makes
+you work with the code.  It's a little harder, but the end result is you can
+work with \emph{any} code, on any computer, in any language, and you
+know what's going on.
+\end{aside}
+
 
