--- a/ex0.tex
+++ b/ex0.tex
@@ -36,9 +36,9 @@ Debian based systems, like Ubuntu you should just have to install
 a few things using these commands:
 
 \begin{code}{Installing Requirements On Ubuntu}
-\begin{Verbatim}
+\begin{lstlisting}
 $ aptitude install build-essential
-\end{Verbatim}
+\end{lstlisting}
 \end{code}
 
 The above is an example of a command line prompt, so to get to where
