--- a/ex1.tex
+++ b/ex1.tex
@@ -8,14 +8,20 @@ Here is a simple first program you can make in C:
 
 You can put this into a \file{ex1.c} then type:
 
-\begin{code}{Building ex1}
-\begin{Verbatim}
-make ex1
-./ex1
-\end{Verbatim}
-\end{code}
+\begin{Terminal}{Building ex1}
+\begin{lstlisting}
+$ make ex1
+$ ./ex1
+\end{lstlisting}
+\end{Terminal}
 
-Try it and let me know if it worked.  If you type this \verb|make ex1.c| then
-you're doing it wrong and need to pay attention to what I typed.  C does not
-treat kindly those who lack attention to detail.
+\section{What You Should See}
+
+
+\section{How To Break It}
+
+
+\section{Extra Credit}
+
+
 
