--- a/ex2.tex
+++ b/ex2.tex
@@ -23,3 +23,14 @@ it to build.  I won't do that in this exercise, but after you've been using
 ... go into a simple makefile ...
 
 ... show how to run the simple makefile ...
+
+\section{What You Should See}
+
+
+\section{How To Break It}
+
+
+\section{Extra Credit}
+
+
+
