--- a/ex3.tex
+++ b/ex3.tex
@@ -16,3 +16,13 @@ in Python.
 
 ... explain this ...
 
+\section{What You Should See}
+
+
+\section{How To Break It}
+
+
+\section{Extra Credit}
+
+
+
