--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction: The Cartesian Dream Of C}
+\chapter*{Introduction: The Cartesian Dream Of C}
 
 \begin{quotation}
 
@@ -29,7 +29,7 @@ Why use C then if it's so dangerous?   Because C gives you power over the false
 reality of abstraction and liberates you from stupidity.
 
 
-\section{What You Will Learn}
+\section*{What You Will Learn}
 
 The purpose of this book is to get you strong enough in C
 that you'll be able to write your own software in it, or modify
@@ -52,7 +52,7 @@ to tackle basic systems software, libraries, and other smaller
 projects.
 
 
-\section{How To Read This Book}
+\section*{How To Read This Book}
 
 This book is intended for programmers who have learned at least one other
 programming language.  I refer you to
@@ -85,7 +85,7 @@ If you follow these rules, do everything in the book, and still can't
 code C then you at least tried.  It's not for everyone, but the act
 of trying will make you a better programmer.
 
-\section{About "The Hard Way"}
+\section*{About "The Hard Way"}
 
 I wrote about the philosophy of "The Hard Way" in my first book using
 this method, but I'll paraphrase it again since I'm assuming you've
@@ -115,7 +115,7 @@ do it in 5 minute spurts, eventually you'll build up your stamina and
 be able to write code for hours on end, lost in it.
 
 
-\section{License}
+\section*{License}
 
 This book is free for you to read, but until I'm done you can't distribute it
 or modify it.  I need to make sure that unfinished copies of it do not get out
