--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,8 @@
     colorlinks,linkcolor=blue,citecolor=blue,
     urlcolor=red,
 ]{hyperref}
+\setcounter{chapter}{1}
+\usepackage{upquote}
 \usepackage{float}
 \usepackage{fancybox}
 %\usepackage{savetrees}
