--- a/preface.tex
+++ b/preface.tex
@@ -1,4 +1,4 @@
-\chapter{Preface}
+\chapter*{Preface}
 
 This is a rough in-progress dump of the book.  The grammar will probably be bad, there
 will be sections missing, but you get to watch me write the book and see how I do things.
