--- a/ex0.tex
+++ b/ex0.tex
@@ -105,7 +105,7 @@ There is probably a different editor for every person out there, but these are
 just a few of the free ones that I know work.  Try a few out, and maybe some
 commercial ones until you find one that you like.
 
-\subsection{WARNING: Do Not Use And IDE}
+\subsection{WARNING: Do Not Use An IDE}
 
 An IDE, or "Integrated Development Environment" will turn you stupid.  They are
 the worst tools if you want to be a good programmer because they hide what's
