Need to lstlisting it.

--- a/ex2.tex
+++ b/ex2.tex
@@ -64,7 +64,9 @@ make a little better.  To start off, create a file with just this
 in it:
 
 \begin{code}{A simple Makefile}
+\begin{lstlisting}
 << d['code/ex2.1.Makefile|dexy'] >>
+\end{lstlisting}
 \end{code}
 
 This file is showing you some new stuff with make.  First we set
